WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269103
[WebGPU] Crash PresentationContextIOSurface::getCurrentTexture if context is not configured
https://bugs.webkit.org/show_bug.cgi?id=269103
Summary
[WebGPU] Crash PresentationContextIOSurface::getCurrentTexture if context is ...
Mike Wyrzykowski
Reported
2024-02-09 15:03:02 PST
[WebGPU] Crash PresentationContextIOSurface::getCurrentTexture if context is not configured
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-09 15:03:19 PST
<
rdar://problem/122672198
>
Mike Wyrzykowski
Comment 2
2024-02-09 15:03:48 PST
radar://122671890
Mike Wyrzykowski
Comment 3
2024-02-09 15:10:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24179
EWS
Comment 4
2024-02-11 16:35:44 PST
Committed
274452@main
(5bb758bb78c9): <
https://commits.webkit.org/274452@main
> Reviewed commits have been landed. Closing PR #24179 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug