[WebGPU] Crash PresentationContextIOSurface::getCurrentTexture if context is not configured https://bugs.webkit.org/show_bug.cgi?id=269103 <radar://122671890>

Reviewed by Dan Glastonbury.

An IPC call made directly to getCurrentTexture may result in a scenario where
the IOSurfaces have not yet been created. In this case, we want to return nullptr
to the caller.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUPresentationContextImpl.cpp:
(WebCore::WebGPU::PresentationContextImpl::getCurrentTexture):
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::getCurrentTexture):
(WebGPU::PresentationContextIOSurface::getCurrentTextureView):

Canonical link: https://commits.webkit.org/274452@main